WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116744
Animated GIFs don't repaint after TCADA un-suspends painting
https://bugs.webkit.org/show_bug.cgi?id=116744
Summary
Animated GIFs don't repaint after TCADA un-suspends painting
Tim Horton
Reported
2013-05-24 15:55:14 PDT
<
rdar://problem/13973514
>
Attachments
patch
(4.96 KB, patch)
2013-05-24 15:57 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-24 15:57:45 PDT
Created
attachment 202861
[details]
patch
Simon Fraser (smfr)
Comment 2
2013-05-24 16:23:18 PDT
Comment on
attachment 202861
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202861&action=review
> Source/WebCore/ChangeLog:3 > + Animated GIFs don't repaint after TCADA un-suspends painting
TCADA wut?
> Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:391 > + if (m_webPage->windowIsVisible()) { > m_webPage->corePage()->resumeScriptedAnimations(); > + m_webPage->corePage()->mainFrame()->view()->resumeAnimatingImages(); > + }
Weird that this is in WK2 code. Are all of m_webPage->corePage()->mainFrame()->view() always non-null?
Tim Horton
Comment 3
2013-05-24 16:34:36 PDT
(In reply to
comment #2
)
> (From update of
attachment 202861
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=202861&action=review
> > > Source/WebCore/ChangeLog:3 > > + Animated GIFs don't repaint after TCADA un-suspends painting > > TCADA wut?
I'll fix that.
> > Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:391 > > + if (m_webPage->windowIsVisible()) { > > m_webPage->corePage()->resumeScriptedAnimations(); > > + m_webPage->corePage()->mainFrame()->view()->resumeAnimatingImages(); > > + } > > Weird that this is in WK2 code.
A little, but no weirder than resumeScriptedAnimations.
> Are all of m_webPage->corePage()->mainFrame()->view() always non-null?
flushLayers depends on all of them being non-null as well, but other code null-checks frame and frameView. I'm never sure. I don't see any clear guarantee that frame or its view are non-null, so I'll check them.
Tim Horton
Comment 4
2013-05-24 16:38:00 PDT
https://trac.webkit.org/r150666
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug