Animated GIFs don't repaint after TiledCoreAnimationDrawingArea un-suspends painting https://bugs.webkit.org/show_bug.cgi?id=116744 <rdar://problem/13973514>

Reviewed by Simon Fraser.

* WebCore.exp.in: Export FrameView::resumeAnimatingImages.
* page/FrameView.cpp:
(WebCore::FrameView::setIsInWindow):
(WebCore::FrameView::resumeAnimatingImages):
Factor the code to restart animated images out of frameView::setIsInWindow.

* page/FrameView.h:
(FrameView):

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::resumePainting):
Force WebCore to repaint animated images when painting is resumed.


Canonical link: https://commits.webkit.org/135040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150666 268f45cc-cd09-0410-ab3c-d52691b4dbfc