Source/WebCore/page/FrameView.cpp
@@ -1069,12 +1069,16 @@ void FrameView::setIsInWindow(bool isInWindow)
     if (RenderView* renderView = this->renderView())
         renderView->setIsInWindow(isInWindow);
 
-    if (isInWindow) {
-        // Drawing models which cache painted content while out-of-window (WebKit2's composited drawing areas, etc.)
-        // require that we repaint animated images to kickstart the animation loop.
+    if (isInWindow)
+        resumeAnimatingImages();
+}
 
-        CachedImage::resumeAnimatingImagesForLoader(frame()->document()->cachedResourceLoader());
-    }
+void FrameView::resumeAnimatingImages()
+{
+    // Drawing models which cache painted content while out-of-window (WebKit2's composited drawing areas, etc.)
+    // require that we repaint animated images to kickstart the animation loop.
+
+    CachedImage::resumeAnimatingImagesForLoader(frame()->document()->cachedResourceLoader());
 }
 
 RenderObject* FrameView::layoutRoot(bool onlyDuringLayout) const
